# Python-For-Datascience

M00/ex00/: Hello.py
M00/ex01/: format_ft_time.py
M00/ex02/: find_ft_type.py  tests.py
M00/ex03/: NULL_not_found.py  tests.py
M00/ex04/: whatis.py
M00/ex05/: building.py  building_utils.py  utils.py
M00/ex06/: filterstring.py  ft_filter.py
M00/ex07/: sos.py
Python-0-Starting/ex03/: NULL_not_found.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building_utils.py  tests.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex08/: Loading.py  tests.py
Python-0-Starting/ex09/: README.md  pyproject.toml
Python-0-Starting/ex09/ft_package/: __init__.py  count_in_list.py  main.py
Python-0-Starting/ex09/tests/: basic_test.py
Python-1-Array/ex00/: give_bmi.py
Python-1-Array/ex01/: array2D.py
